2001-02-14  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/sketch (sketch): Updated exceptions list.
	* lib/comicspage (herb & bound): Changed ampersand to "and" so
	shell commands wouldn't need the "&" in their names escaped.
	* lib/kingfeatures (sroper): Changed ampersand to "and" so
	shell commands wouldn't need the "&" in their names escaped.
	* lib/keenspot (alice): Fixed passing of the size & main.
	(adventure): Disabled.
	* lib/elf_life (elf): Fixed the type field regexp
	(thanks to Jeremy Bettis).
	* lib/dr_fun (drfun): Disabled the size
	(thanks to Jeremy Bettis).
	* lib/clan_cats: file type can also be jpg
	(thanks to Jeremy Bettis).
	* lib/norm (nm): Updated the sunday size thanks to 
	Brent Nordquist.
	* netcomics (skip_rli): Added logic to catch when the user
	unspecified some comics (thanks to Jeremy Bettis).

2001-02-12  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/sourcewars: Added Daemon News' "Source Wars".

2001-02-07  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/comicspage_ed (jeffm): Removed Jeff MacNelly thanks to Sizer.
	* lib/kingfeatures: Removed Boner's Ark, Bringing Up Father, and
	Claire and Weber.  Fixed those comics that use kingfeature2 & 3.
	* lib/heaven_and_earth (heaven): Added Heaven and Earth thanks to
	Shawn Oakey.
	* lib/mercury: Fixed broken comics & removed Ick & Mickey Mouse.
	* lib/ctoons: removed because the site's gone.
	* lib/unitedmedia: Updated thanks to Sizer.
	Comics moved here: 9 Chickweed Lane, PC N Pixel
	New comics:
	Big Nate
	Bulls and Bears
	Cheap Thrills Cuisine
	Flight Deck
	Grand Avenue
	Grandfather Clause
	Lupo Alberto
	Mr. Lowe
	Pickles
	Raising Duncan
	Randolph Itch 2:00 AM
	Reality Check
	Red and Rover
	Shirley and Son
	Soup to Nutz
	* lib/uexpress: Removed this module.
	* lib/ucomics: Moved comics from uexpress to ucomics thanks to
	Tim Kimber 
	* lib/ozy_millie (ozy): Updated for site change thanks to Sizer.

2001-02-06  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
